fixed spacing

--- a/index.css
+++ b/index.css
@@ -18,6 +18,9 @@ code {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 40px;
+  box-sizing: border-box;
+  grid-gap: 20px;
 }
 
 .sidebar {
